2001-08-14  Kjartan Maraas  <kmraaas@gnome.org>

	* help/*/*.sgml: Fix up the sgml. My italian is a bit rusty
	so you might want to check that I didn't break anything :)
	
2001-07-27  Abel Cheung  <maddog@linux.org.hk>

	* mahjongg.desktop: Added traditional Chinese translation.

2001-07-07  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* mahjongg.[ch]: You are dead imlib thing.
	* gnome-canvas-pimage.[ch]: Work around gnomecanvaspixbuf slowness.

2001-07-05  Christian Rose  <menthos@menthos.com>

	* mahjongg.desktop: Modified Swedish entries.

2001-06-26  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* help/ip/Makefile.am (figs): Remove some inexistents figures,
	  now distcheck work fine.

2001-05-26  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* mahjongg.c (apply_preferences), (fill_tile_menu),
	  (load_tiles): Plug memory leaks.

2001-05-23  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* mahjongg.c (properties_callback): Connect to close signal
	  instead of delete_event. Fixes bug #53450.

2000-10-19  Dan Mueth <d-mueth@uchicago.edu>

	* help/C/topic.dat: Fixed
	  er - I was being dumb below.  The menu item is now
	  fine.  Just the properties dialog button remains.

2000-10-19  Dan Mueth <d-mueth@uchicago.edu>

	* Makefile.am: added SUBDIRS = help
	* help/Makefile.am: Added this file, with SUBDIRS = C
	* help/C/topic.dat: Added this file 
	* help/C/Makefile.am: Added this file 
	* mahjongg.c: I didn't change this.  It currently calls
	  up the help doc okay, but we should change the call
	  to list Help with the pretty logo instead of just
	  listing 'mahjong'.  We also need to hook up a Help
	  button in the preferences dialog.  I have to run
	  now, so this will have to wait until later.

2000-09-13  Eric Baudais  <baudais@okstate.edu>

	* help/C/*: Added documentation to mahjongg.  It is not currently linked 
	into the program.

2000-05-12  Andreas Hyden  <a.hyden@cyberpoint.se>

	* mahjongg.desktop: Added Swedish translation.
